# DMP6

./: .gitignore  CLAUDE.md  PARTY_MODE_FIX.md  QUICK_START.md  README.md  SCRIPT_SYNC_INSTRUCTIONS.md  a.md  analysis  analysis_overhaul.md  backup  clean  index  mp3tag.csv  nuke  stack.md  sync  test-s3.sh
.claude/: settings.json
docs/: 3_PHASE_IMPLEMENTATION.md  PARTY_MODE_DEPLOYMENT.md  PRD.md  PRD_explore.md  README.md  analysis.md  auth_proposal.md  beets.md  deploy.md  dev_guide.md  features_downloader.md  features_party.md  future.md  images.md  music_party.md  music_party_implementation_plan.md  music_party_webrtc.md  rust scanner.md  schema.md  scripts.md  setup.md  setup_live.md  setup_local.md  sync.md  todo.md  web.md
docs/scripts/: analysis.md  clean.md  index.md  nuke.md  sync.md
scripts/: README.md
scripts/analysis/: Cargo.toml
scripts/analysis/src/: main.rs
scripts/clean/: Cargo.toml
scripts/clean/src/: main.rs
scripts/index/: Cargo.toml
scripts/index/src/: main.rs
scripts/nuke/: Cargo.toml
scripts/nuke/src/: main.rs
scripts/sync/: Cargo.toml
scripts/sync/src/: main.rs
scripts/test-s3/: Cargo.toml
scripts/test-s3/src/: main.rs
web/: .env  .env.example  ecosystem.config.cjs  error.vue  nginx-dmp.conf  nuxt.config.ts  package.json  pnpm-lock.yaml  server.env.example
web/assets/css/: main.css
web/components/: Dialog.vue  Dropdown.vue  Slider.vue  ToggleFavorite.vue  TrackList.vue
web/components/artist/: ArtistHeader.vue  ArtistReleases.vue  AverageMatchScore.vue  Cover.vue  DialogGenres.vue  DialogLinks.vue  Genres.vue  Initial.vue  Links.vue  TotalPlays.vue  TotalTracks.vue
web/components/browse/: ArtistCard.vue  ArtistGrid.vue  FilterGenre.vue  FilterLetter.vue  FilterScore.vue  FilterSort.vue
web/components/home/: PlaylistGrid.vue  ReleaseGrid.vue
web/components/layout/: Logo.vue  MobileNav.vue  SearchBar.vue  SearchDropdown.vue  Sidebar.vue
web/components/player/: AudioPlayer.vue
web/components/release/: ReleaseCover.vue  StatusBadge.vue  TracksTable.vue
web/components/ui/: ReleaseSkeleton.vue  Skeleton.vue
web/composables/: useImageUrl.ts  usePartyHost.ts  usePartyListener.ts  useStreamMode.ts
web/helpers/: constants.ts
web/layouts/: default.vue
web/pages/: browse.vue  explore.vue  favorites.vue  index.vue  party-debug.vue  party-status.vue  party.vue  statistics.vue
web/pages/artist/: [slug].vue
web/plugins/: pinia-persistence.client.ts
web/prisma/: schema.prisma
web/scripts/: backup.ts  deploy.ts  restore.ts  run-server-setup.sh  server-setup.sh
web/stores/: browse.ts  partyHost.ts  player.ts
web/types/: api.ts  artist.ts  favorites.ts  player.ts  playlist.ts  release.ts  search.ts  stats.ts  track.ts
(+36 files in other folders)
