[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
lofty = "0.22"
rayon = "1.10"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
html-escape = "0.2"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
