[package]
name = "dmp-clean"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dmp-clean"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
colored = "2.1"
aws-sdk-s3 = "1"
aws-config = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
