[package]
name = "dmp-index"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dmp-index"
path = "src/main.rs"

[dependencies]
lofty = "0.22"
rayon = "1.10"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
cuid2 = "0.1"
image = "0.25"
md-5 = "0.10"
dotenvy = "0.15"
slug = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
