[package]
name = "dmp-nuke"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dmp-nuke"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
