[package]
name = "dmp-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dmp-sync"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
cuid2 = "0.1"
image = "0.25"
dotenvy = "0.15"
slug = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"
colored = "2.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
